# embedded-motor-reference

./: .gitlab-ci.yml  .gitmodules  .ls-lint.yml  .mega-linter.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  release-please-config.json  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/formatters/: gtest-to-generic-execution.xslt
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  (+4 more)
.gitlab/: build.yml
application/: CMakeLists.txt
application/bldc/test/: CMakeLists.txt
application/dc/: CMakeLists.txt  Main.cpp
application/dc/instantiations/: CMakeLists.txt  Logic.cpp  Logic.hpp
application/dc/logic/: CMakeLists.txt  MotorController.hpp  MotorControllerImpl.cpp  MotorControllerImpl.hpp  Terminal.cpp  Terminal.hpp
application/dc/main/: CMakeLists.txt  Main.cpp
application/foc/: CMakeLists.txt  FieldOrientedController.hpp  FieldOrientedControllerInterface.hpp  FocWithTimer.cpp  FocWithTimer.hpp  MotorFieldOrientedController.cpp  MotorFieldOrientedController.hpp  MotorFieldOrientedControllerInterface.hpp
application/foc/implementations/: CMakeLists.txt  ControllerBaseImpl.cpp  ControllerBaseImpl.hpp  NormalizedAngles.hpp  SpaceVectorModulation.cpp  SpaceVectorModulation.hpp  SpeedControllerImpl.cpp  SpeedControllerImpl.hpp  TorqueControllerImpl.cpp  TorqueControllerImpl.hpp  TransformsClarkePark.cpp  TransformsClarkePark.hpp
application/foc/implementations/test/: CMakeLists.txt  TestSpaceVectorModulation.cpp  TestSpeedController.cpp  TestTorqueController.cpp  TestTransformsClarkePark.cpp
application/foc/implementations/test_doubles/: CMakeLists.txt  ControllerMock.hpp  DriversMock.hpp  FieldOrientedControllerMock.hpp  MotorFieldOrientedControllerMock.hpp
application/foc/instantiations/: CMakeLists.txt  FieldOrientedControllerImpl.cpp  FieldOrientedControllerImpl.hpp  SpaceVectorModulatorImpl.cpp  SpaceVectorModulatorImpl.hpp  TrigonometricImpl.cpp  TrigonometricImpl.hpp
application/foc/interfaces/: CMakeLists.txt  Controller.hpp  Driver.hpp  FieldOrientedController.hpp
application/foc/test/: CMakeLists.txt  TestFocWithTimer.cpp  TestMotorFieldOrientedController.cpp
application/foc/test_doubles/: CMakeLists.txt  FieldOrientedControllerInterfaceMock.hpp  FieldOrientedControllerMock.hpp  MotorFieldOrientedControllerMock.hpp  SpaceVectorModulatorMock.hpp  TrigonometricFunctionsMock.hpp
application/hardware/: AdcMultiChannelDecorator.hpp  CMakeLists.txt  HardwareFactory.hpp  MotorFieldOrientedControllerAdapter.cpp  MotorFieldOrientedControllerAdapter.hpp  PidAdapter.cpp  PidAdapter.hpp  QuadratureEncoderDecorator.hpp
application/hardware/EK-TM4C1294XL/: CMakeLists.txt  HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp  Pins.hpp
application/hardware/Host/: CMakeLists.txt  HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp
application/hardware/Host/implementation/: CMakeLists.txt  HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp
application/hardware/STM32F407G-DISC1/: HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp
application/hardware/st/: CMakeLists.txt
application/hardware/st/NUCLEO-H563ZI/: CMakeLists.txt
application/hardware/st/STM32F407G-DISC1/: CMakeLists.txt
application/hardware/st/implementation/: CMakeLists.txt  HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp
application/hardware/ti/: HardwareFactoryImpl.hpp
application/hardware/ti/EK-TM4C123GXL/: CMakeLists.txt  PinsAndPeripherals.hpp
application/hardware/ti/EK-TM4C1294XL/: CMakeLists.txt  PinsAndPeripherals.hpp
application/hardware/ti/implementation/: CMakeLists.txt  HardwareFactoryImpl.cpp  HardwareFactoryImpl.hpp
application/pid/: CMakeLists.txt  Pid.cpp  Pid.hpp  PidImpl.cpp  PidImpl.hpp  PidInterface.hpp  PidWithTimer.cpp  PidWithTimer.hpp
application/pid/instantiations/: CMakeLists.txt  PidImpl.cpp  PidImpl.hpp
application/pid/test/: CMakeLists.txt  TestPid.cpp  TestPidWithTimer.cpp
application/pid/test_doubles/: CMakeLists.txt  PidInterfaceMock.hpp  PidMock.hpp
docs/: TrajectoryGenerator.md
scripts/: development_environment.cmake  start-development-environment.ps1.in
simulator/: CMakeLists.txt  pmsm_foc_measurements.csv  simulator.py
simulator/plot/: CMakeLists.txt  Plot.cpp  Plot.hpp
simulator/pmsm/: CMakeLists.txt  Model.cpp  Model.hpp  jk42bls01_x038ed.hpp
simulator/speed_control/: CMakeLists.txt  Main.cpp  Plot.cpp  Plot.hpp
simulator/torque_control/: CMakeLists.txt  Main.cpp  Plot.cpp
source/: CMakeLists.txt
source/services/alignment/: CMakeLists.txt  MotorAlignment.cpp  MotorAlignment.hpp  MotorAlignmentImpl.cpp  MotorAlignmentImpl.hpp  TerminalMotorAlignment.cpp  TerminalMotorAlignment.hpp
source/services/alignment/test/: CMakeLists.txt  TestMotorAlignment.cpp  TestTerminalMotorAlignment.cpp
source/services/cli/: CMakeLists.txt  FocInteractor.hpp  FocInteractorImpl.hpp  FocPositionInteractorImpl.cpp  FocPositionInteractorImpl.hpp  FocSpeedInteractorImpl.cpp  FocSpeedInteractorImpl.hpp  FocTorqueInteractorImpl.cpp  FocTorqueInteractorImpl.hpp  TerminalBase.cpp  TerminalBase.hpp  TerminalHelper.hpp  TerminalPosition.cpp  TerminalPosition.hpp  TerminalSpeed.cpp  TerminalSpeed.hpp  TerminalTorque.cpp  TerminalTorque.hpp  TerminalWithBanner.cpp  TerminalWithBanner.hpp
source/services/cli/test/: CMakeLists.txt  TestFocPositionInteractor.cpp  TestFocSpeedInteractor.cpp  TestFocTorqueInteractor.cpp  TestTerminalBase.cpp  TestTerminalPosition.cpp  TestTerminalSpeed.cpp  TestTerminalTorque.cpp  TestTerminalWithBanner.cpp
source/services/parameter_identification/: CMakeLists.txt  MotorIdentification.cpp  MotorIdentification.hpp  MotorIdentificationImpl.cpp  MotorIdentificationImpl.hpp  TerminalMotorIdentification.cpp  TerminalMotorIdentification.hpp
source/services/parameter_identification/test/: CMakeLists.txt  TestMotorIdentification.cpp  TestTerminalMotorIdentification.cpp
source/services/terminal/: CMakeLists.txt  FocTorqueInteractorImpl.cpp  FocTorqueInteractorImpl.hpp  TerminalTorque.cpp  TerminalTorque.hpp
(+204 files in other folders)
