add_library(e_foc.services.alignment ${EMIL_EXCLUDE_FROM_ALL})

target_include_directories(e_foc.services.alignment PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../../../../>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)

target_link_libraries(e_foc.services.alignment PUBLIC
    infra.util
    e_foc.hardware
    e_foc.foc.interfaces
)

target_sources(e_foc.services.alignment PRIVATE
    MotorAlignment.cpp
    MotorAlignment.hpp
)

add_subdirectory(test)
